--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <header>Sam Thomson</header>
-    <h1>Film Portfolio</h1>
+    <header>
+      <h1>Film Portfolio</h1>
+    </header>
     <hr/>
     <div id="root"></div>
     <!--
